@@ -4,6 +4,10 @@
 	* gdb.reverse/i386-sse-reverse.exp (continue to end of sse_test #2):
 	Wrap send_gdb into a new gdb_test.
 
+	Code cleanup.
+	* gdb.reverse/i386-sse-reverse.exp (continue to end of sse4_test):
+	Convert send_gdb and gdb_expect to gdb_test_multiple.
+
 2011-11-25  Jan Kratochvil  <jan.kratochvil@redhat.com>
 
 	* gdb.base/jit-so.exp (one_jit_test): Add testcase name to log message.
